2001-07-13  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack-cmd.el (defun-nethack-command): New macro.  Redefine all
	nethack commands with this macro.  All nethack commands now take
	optional count argument.

2001-07-10  Ryan Yeske  <rcyeske@van.gobasis.com>

	* nethack-api.el (nethack-api-ask-direction): remove setq

2001-07-09  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack.el (nethack-process-filter): rewrite to insert string
	into process buffer and read and evaluate forms directly out of
	the buffer
	(nethack-process-output): remove
	(nethack-process-command-list): remove
	(nethack-parse-command): remove
	(nethack-log-string): comment out body
	(nethack-start-program): make sure process buffer exists and erase
	old contents.

	* nethack-menu.el (nethack-menu-buffer): remove
	(nethack-menu-add-item): add accelerator argument
	(nethack-menu-draw): use accelerator argument
	(nethack-menu-get-choices): replace `cond' with `if'

	* nethack-api.el (nethack-api-add-menu): call
	nethack-menu-add-item with accelerator argument.
	(nethack-api-bell): call ding.

2001-07-06  shawn  <sabetts@diggin.lamenet.tmp>

	* nethack.el (nethack-handle-command): Add arg to specify how many
	times to execute the command.

	* nethack-menu.el (nethack-menu-get-choices): use -1 for the
	quantity of the item chosen.

	* nethack-cmd.el (nethack-command-search): Add prefix arg.
	(nethack-command-rest-one-move): likewise

	* nethack-api.el (nethack-api-ask-direction): s is a list of
	commands to move south.

2001-07-05  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack.el (nethack-yellow): Use "yellow3" for light
	backgrounds.

	* nethack-menu.el (nethack-menu-draw): Print close instructions at
	the top of menu.  Place the point at the top of menu after drawing
	it.

2001-07-05  shawn  <sabetts@diggin.lamenet.tmp>

	* nethack.el (nethack-load-hook): new hook
	run nethack-load-hook hooks.

	* nethack-keys.el (nethack-mode-map): remove binding to
	nethack-command-cancel
